--- a/alfm/alfm_refs.bib
+++ b/alfm/alfm_refs.bib
@@ -181,3 +181,19 @@
   year      = {2023},
   url       = {https://arxiv.org/abs/2310.10501}
 }
+
+@article{Meyerson2025,
+  author    = {Elliot Meyerson and Giuseppe Paolo and Roberto Dailey and Hormoz Shahrzad and Olivier Francon and Conor F. Hayes and Xin Qiu and Babak Hodjat and Risto Miikkulainen},
+  title     = {Solving a Million-Step {LLM} Task with Zero Errors},
+  journal   = {arXiv preprint arXiv:2511.09030},
+  year      = {2025},
+  url       = {https://arxiv.org/abs/2511.09030}
+}
+
+@inproceedings{Behrouz2025,
+  author    = {Ali Behrouz and Meisam Razaviyayn and Peiling Zhong and Vahab Mirrokni},
+  title     = {Nested Learning: The Illusion of Deep Learning Architectures},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume    = {39},
+  year      = {2025}
+}
